--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,5 +1,3 @@
-/* Footer.css */
-
 .footer {
   background: #5B3A82;
   padding: 50px 40px;
@@ -9,19 +7,19 @@
   flex-wrap: wrap;
   gap: 30px;
 }
-
 .footer-box h3 {
   color: #D4AF37;
 }
-
+.footer-box {
+  width: 20%;
+}
 .footer-box a {
   display: block;
   text-decoration: none;
   color: white;
   margin-top: 8px;
-  transition: 0.3s;
+    transition: 0.3s;
 }
-
 .footer-box a:hover {
   color: #C9B6E4;
 }
@@ -39,8 +37,11 @@
   margin-top: 30px;
   transition: color 0.4s;
 }
-
 .logo-foot span {
   color: #D4AF37;
 }
-
+@media (max-width:786px) {
+  .footer-box{
+    width: 100%;
+  }
+}
