--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -93,7 +93,7 @@
     right: -100%;
     width: 240px;
     height: calc(100vh - 70px);
-    background: rgba(0, 0, 0, 0.9);
+    background: #5B3A82;
     flex-direction: column;
     align-items: center;
     padding-top: 30px;
